Fix build errors, optimize bundle config, and prepare for deployment

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VeriScan Pro | Forensic Text Analysis</title>
+    <meta name="description" content="VeriScan Pro - Advanced Forensic Text Analysis, Plagiarism Detection, and AI Content Verification.">
 
     <!-- ❌ REMOVED Tailwind CDN -->
     <!-- ❌ REMOVED inline tailwind.config script -->
