--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     <!-- ✅ Local Tailwind build -->
 
 
+    <!-- Polyfill for libraries using process.env -->
+    <script>
+        window.process = { env: { NODE_ENV: 'production' } };
+    </script>
 </head>
 
 <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100">
